--- a/ngrx-material/fitness-app/src/app/app.component.html
+++ b/ngrx-material/fitness-app/src/app/app.component.html
@@ -2,57 +2,19 @@
 
   <!-- Sidenav -->
   <mat-sidenav #sidenav role="navigation">
-    <mat-nav-list>
-
-      <a
-        *ngFor="let link of links"
-        mat-list-item
-        [routerLink]="link.path"
-        class="nav-item"
-        (click)="sidenav.close()"
-      >
-        <mat-icon>{{ link.icon }}</mat-icon>
-        <span>{{ link.label }}</span>
-      </a>
-
-      <mat-list-item>
-        <button mat-icon-button class="nav-item">
-          <mat-icon>meeting_room</mat-icon>
-          <span>Logout</span>
-        </button>
-      </mat-list-item>
-
-    </mat-nav-list>
+    <app-sidenav-list
+      [links]="links"
+      (sidenavClose)="sidenav.close()"
+    ></app-sidenav-list>
   </mat-sidenav>
 
   <mat-sidenav-content>
 
     <!-- Toolbar -->
-    <mat-toolbar color="primary">
-
-      <!-- Menu -->
-      <div class="menu-handle">
-        <button mat-icon-button (click)="sidenav.toggle()">
-          <mat-icon>menu</mat-icon>
-        </button>
-      </div>
-
-      <!-- Logo -->
-      <div class="logo">
-        <a routerLink="/">LOGO</a>
-      </div>
-
-      <!-- Links -->
-      <ul class="links">
-        <li *ngFor="let link of links" class="link">
-          <a [routerLink]="link.path">{{ link.label }}</a>
-        </li>
-        <li class="link">
-          <a>Logout</a>
-        </li>
-      </ul>
-
-    </mat-toolbar>
+    <app-header
+      [links]="links"
+      (sidenavOpen)="sidenav.open()"
+    ></app-header>
 
     <!-- Content -->
     <main>
