TODO: Add training base page

--- a/ngrx-material/fitness-app/src/app/app.component.html
+++ b/ngrx-material/fitness-app/src/app/app.component.html
@@ -19,6 +19,7 @@
     <!-- Content -->
     <main>
       <router-outlet></router-outlet>
+      <router-outlet name="training"></router-outlet>
     </main>
 
   </mat-sidenav-content>
