Add template to current training page

--- a/ngrx-material/fitness-app/src/app/features/training/containers/training-new/training-new.component.html
+++ b/ngrx-material/fitness-app/src/app/features/training/containers/training-new/training-new.component.html
@@ -22,7 +22,7 @@
     </mat-card-content>
 
     <mat-card-actions>
-      <button mat-button type="submit">Start</button>
+      <button mat-button type="submit" (click)="onStartTraining()">Start</button>
     </mat-card-actions>
 
   </mat-card>
