Add training stop dialog

--- a/ngrx-material/fitness-app/src/app/features/training/containers/training/training.component.html
+++ b/ngrx-material/fitness-app/src/app/features/training/containers/training/training.component.html
@@ -14,4 +14,7 @@
 
 </mat-tab-group>
 
-<app-training-current *ngIf="ongoingTraining"></app-training-current>
+<app-training-current
+  *ngIf="ongoingTraining"
+  (trainingExited)="onTrainingExit()"
+></app-training-current>
