--- a/ngrx-material/fitness-app/src/app/features/training/containers/training-current/training-current.component.html
+++ b/ngrx-material/fitness-app/src/app/features/training/containers/training-current/training-current.component.html
@@ -1,8 +1,17 @@
 <section>
 
-  <mat-progress-spinner mode="determinate" [value]="progress"></mat-progress-spinner>
+  <mat-progress-spinner
+    mode="determinate"
+    [value]="progress"
+  ></mat-progress-spinner>
+
   <h1>{{ progress }}%</h1>
   <p>Keep it up!</p>
-  <button mat-raised-button color="accent">Stop</button>
+
+  <button
+    mat-raised-button
+    color="accent"
+    (click)="onStop()"
+  >Stop</button>
 
 </section>
