--- a/ngrx-material/fitness-app/src/app/core/components/sidenav-list/sidenav-list.component.html
+++ b/ngrx-material/fitness-app/src/app/core/components/sidenav-list/sidenav-list.component.html
@@ -11,7 +11,7 @@
     <span>{{ link.label }}</span>
   </a>
 
-  <mat-list-item>
+  <mat-list-item *ngIf="authService.isAuthenticated$ | async">
     <button mat-icon-button class="nav-item">
       <mat-icon>meeting_room</mat-icon>
       <span>Logout</span>
