--- a/ngrx-material/fitness-app/src/app/core/components/header/header.component.html
+++ b/ngrx-material/fitness-app/src/app/core/components/header/header.component.html
@@ -14,12 +14,15 @@
 
   <!-- Links -->
   <ul class="links">
+
     <li *ngFor="let link of links" class="link">
       <a [routerLink]="link.path">{{ link.label }}</a>
     </li>
+
     <li *ngIf="authService.isAuthenticated$ | async" class="link">
-      <a>Logout</a>
+      <a (click)="onLogout()">Logout</a>
     </li>
+
   </ul>
 
 </mat-toolbar>
