Refactor training service

--- a/ngrx-material/fitness-app/src/app/core/components/header/header.component.html
+++ b/ngrx-material/fitness-app/src/app/core/components/header/header.component.html
@@ -9,7 +9,7 @@
 
   <!-- Logo -->
   <div class="logo">
-    <a routerLink="/">LOGO</a>
+    <a routerLink="/">TRAINING APP</a>
   </div>
 
   <!-- Links -->
