--- a/ngrx-material/fitness-app/src/app/features/training/containers/training-current/training-current.component.scss
+++ b/ngrx-material/fitness-app/src/app/features/training/containers/training-current/training-current.component.scss
@@ -1,7 +1,16 @@
 section {
   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+mat-card {
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
+  width: 100%;
+  max-width: 400px;
   padding: 2rem;
 }
