Add past exercises to training service

--- a/ngrx-material/fitness-app/src/app/features/training/containers/training-past/training-past.component.html
+++ b/ngrx-material/fitness-app/src/app/features/training/containers/training-past/training-past.component.html
@@ -1,1 +1,8 @@
-<p>training-past works!</p>
+<h1>Past exercises</h1>
+
+<ul>
+  <li *ngFor="let exercise of exercises">
+    {{ exercise.name }}
+    ({{ exercise.date | date }})
+  </li>
+</ul>
