--- a/ngrx-material/fitness-app/src/app/features/training/containers/training-new/training-new.component.html
+++ b/ngrx-material/fitness-app/src/app/features/training/containers/training-new/training-new.component.html
@@ -5,7 +5,7 @@
 
       <mat-card-content>
         <mat-form-field appearance="fill">
-          <mat-label>Select your training</mat-label>
+          <mat-label>Choose exercise</mat-label>
           <mat-select formControlName="training">
             <mat-option *ngFor="let exercise of exercises" [value]="exercise.id">
               {{ exercise.name }}
@@ -15,7 +15,9 @@
       </mat-card-content>
 
       <mat-card-actions>
-        <button mat-button type="submit">Start</button>
+        <button [disabled]="newExerciseForm.invalid" mat-button type="submit">
+          Start
+        </button>
       </mat-card-actions>
 
     </mat-card>
