--- a/ngrx-material/fitness-app/src/app/features/training/containers/training-past/training-past.component.html
+++ b/ngrx-material/fitness-app/src/app/features/training/containers/training-past/training-past.component.html
@@ -1,8 +1,19 @@
-<mat-table [dataSource]="dataSource">
+<div class="filters">
+  <mat-form-field>
+    <input
+      matInput
+      type="text"
+      placeholder="Filter..."
+      (keyup)="onFilterData($event.target.value)"
+    >
+  </mat-form-field>
+</div>
+
+<mat-table [dataSource]="dataSource" matSort>
 
   <!-- Date -->
   <ng-container matColumnDef="date">
-    <mat-header-cell *matHeaderCellDef>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>
       Date
     </mat-header-cell>
     <mat-cell *matCellDef="let element">
@@ -12,7 +23,7 @@
 
   <!-- Name -->
   <ng-container matColumnDef="name">
-    <mat-header-cell *matHeaderCellDef>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>
       Name
     </mat-header-cell>
     <mat-cell *matCellDef="let element">
@@ -22,7 +33,7 @@
 
   <!-- Calories -->
   <ng-container matColumnDef="calories">
-    <mat-header-cell *matHeaderCellDef>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>
       Calories
     </mat-header-cell>
     <mat-cell *matCellDef="let element">
@@ -32,7 +43,7 @@
 
   <!-- Duration -->
   <ng-container matColumnDef="duration">
-    <mat-header-cell *matHeaderCellDef>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>
       Duration
     </mat-header-cell>
     <mat-cell *matCellDef="let element">
@@ -42,7 +53,7 @@
 
   <!-- State -->
   <ng-container matColumnDef="state">
-    <mat-header-cell *matHeaderCellDef>
+    <mat-header-cell *matHeaderCellDef mat-sort-header>
       State
     </mat-header-cell>
     <mat-cell *matCellDef="let element">
@@ -54,3 +65,9 @@
   <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
 
 </mat-table>
+
+<mat-paginator
+  #paginatorRef
+  [pageSize]="1"
+  [pageSizeOptions]="[1, 5, 10, 25]"
+></mat-paginator>
