Style <ui-ghost-dots>

--- a/ngrx/code/posts-app/src/app/shared/ui/components/ghost-dots/ghost-dots.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/ghost-dots/ghost-dots.component.html
@@ -1,3 +1,5 @@
-<div class="dot size-{{ size }}"></div>
-<div class="dot size-{{ size }}"></div>
-<div class="dot size-{{ size }}"></div>
+<div class="dots size-{{ size }}">
+  <div class="dot left"></div>
+  <div class="dot center"></div>
+  <div class="dot right"></div>
+</div>
