--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/ghost/ghost.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/ghost/ghost.component.html
@@ -6,4 +6,20 @@
 ]"></ui-breadcrumbs>
 
 <h2>Dots</h2>
-<ui-ghost-dots></ui-ghost-dots>
+<section>
+  <ui-ghost-dots size="small"></ui-ghost-dots>
+  &nbsp;
+  <code>size="small"</code>
+</section>
+
+<section>
+  <ui-ghost-dots size="medium"></ui-ghost-dots>
+  &nbsp;
+  <code>size="medium" (default)</code>
+</section>
+
+<section>
+  <ui-ghost-dots size="large"></ui-ghost-dots>
+  &nbsp;
+  <code>size="large"</code>
+</section>
