Add floating animation to <ui-ghost-dots>

--- a/ngrx/code/posts-app/src/app/shared/ui/components/ghost-dots/ghost-dots.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/ghost-dots/ghost-dots.component.html
@@ -1,4 +1,4 @@
-<div class="dots size-{{ size }}">
+<div class="dots size-{{ size }}" [class.float-animation]="float">
   <div class="dot left"></div>
   <div class="dot center"></div>
   <div class="dot right"></div>
