--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/ghost/ghost.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/ghost/ghost.component.html
@@ -6,6 +6,13 @@
 ]"></ui-breadcrumbs>
 
 <h2>Dots</h2>
+
+<section>
+  <ui-ghost-dots></ui-ghost-dots>
+  &nbsp;
+  <code>default</code>
+</section>
+
 <section>
   <ui-ghost-dots size="small"></ui-ghost-dots>
   &nbsp;
@@ -15,11 +22,17 @@
 <section>
   <ui-ghost-dots size="medium"></ui-ghost-dots>
   &nbsp;
-  <code>size="medium" (default)</code>
+  <code>size="medium"</code>
 </section>
 
 <section>
   <ui-ghost-dots size="large"></ui-ghost-dots>
   &nbsp;
   <code>size="large"</code>
+</section>
+
+<section>
+  <ui-ghost-dots [float]="false"></ui-ghost-dots>
+  &nbsp;
+  <code>[float]="false"</code>
 </section>
