--- a/ngrx/code/posts-app/src/app/shared/ui/components/ghost-dots/ghost-dots.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/ghost-dots/ghost-dots.component.scss
@@ -1,40 +1,36 @@
 @import 'src/app/style';
-@import 'src/app/shared/ui/common/scss/animations/flash';
 @import 'src/app/shared/ui/common/scss/mixins/circle';
+@import 'src/app/shared/ui/common/scss/ghost';
 
-$dark: rgba(0,0,0,0.2);
-$light: rgba(255,255,255,0.33);
+$flash-anim: ui-ghost-flash-animation 0.5s linear infinite;
+$float-anim: ui-ghost-float-animation 0.5s linear infinite;
+$float-delayed-anim: ui-ghost-float-animation 0.5s 0.25s linear infinite;
+
+@keyframes ui-ghost-float-animation {
+  0% { transform: translateY(0); }
+  50% { transform: translateY(-10%); }
+  100% { transform: translateY(0); }
+}
 
 .dots {
   display: inline-flex;
   align-items: center;
 
-  &.size-small .dot {
-    @include ui-circle(1rem);
-  }
+  &.size-small .dot { @include ui-circle(1rem) }
+  &.size-medium .dot { @include ui-circle(1.66rem) }
+  &.size-large .dot { @include ui-circle(2.5rem) }
+}
 
-  &.size-medium .dot {
-    @include ui-circle(1.66rem);
-  }
-
-  &.size-large .dot {
-    @include ui-circle(2.5rem);
-  }
+.dots.float-animation {
+  .left { animation: $flash-anim, $float-anim }
+  .center { animation: $flash-anim, $float-delayed-anim }
+  .right { animation: $flash-anim, $float-anim }
 }
 
 .dot {
+  @include ui-ghost-element();
   border-radius: 50%;
-  background-color: $dark;
-  background-image: linear-gradient(90deg, transparent 0%, $light 50%, transparent 100%);
-  background-size: 50%;
-  background-repeat: no-repeat;
-  animation: ui-flash 0.5s linear infinite;
 
-  &.left {
-    margin-right: 0.66rem;
-  }
-
-  &.right {
-    margin-left: 0.66rem;
-  }
+  &.left { margin-right: 0.66rem }
+  &.right { margin-left: 0.66rem }
 }
