Fix ghost dots on /posts

--- a/ngrx/code/posts-app/src/app/features/posts/containers/posts/posts.component.html
+++ b/ngrx/code/posts-app/src/app/features/posts/containers/posts/posts.component.html
@@ -28,5 +28,7 @@
 </ng-container>
 
 <ng-template #loadingRef>
-  <ui-ghost-dots></ui-ghost-dots>
+  <div class="ghost-dots">
+    <ui-ghost-dots></ui-ghost-dots>
+  </div>
 </ng-template>
