--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/ghost/ghost.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/ghost/ghost.component.html
@@ -5,34 +5,56 @@
   { path: null, label: 'Ghost' }
 ]"></ui-breadcrumbs>
 
+<h2>Rectangles</h2>
+
+<section>
+  <code>default</code>
+  <br>
+  <ui-ghost-rectangle></ui-ghost-rectangle>
+</section>
+
+<section>
+  <code>
+    width="33%"
+    height="5rem"
+    rounded="medium"
+  </code>
+  <br>
+  <ui-ghost-rectangle
+    width="33%"
+    height="5rem"
+    rounded="medium"
+  ></ui-ghost-rectangle>
+</section>
+
 <h2>Dots</h2>
 
 <section>
-  <ui-ghost-dots></ui-ghost-dots>
-  &nbsp;
   <code>default</code>
+  <br>
+  <ui-ghost-dots></ui-ghost-dots>
 </section>
 
 <section>
-  <ui-ghost-dots size="small"></ui-ghost-dots>
-  &nbsp;
   <code>size="small"</code>
+  <br>
+  <ui-ghost-dots size="small"></ui-ghost-dots>
 </section>
 
 <section>
-  <ui-ghost-dots size="medium"></ui-ghost-dots>
-  &nbsp;
   <code>size="medium"</code>
+  <br>
+  <ui-ghost-dots size="medium"></ui-ghost-dots>
 </section>
 
 <section>
-  <ui-ghost-dots size="large"></ui-ghost-dots>
-  &nbsp;
   <code>size="large"</code>
+  <br>
+  <ui-ghost-dots size="large"></ui-ghost-dots>
 </section>
 
 <section>
-  <ui-ghost-dots [float]="false"></ui-ghost-dots>
-  &nbsp;
   <code>[float]="false"</code>
+  <br>
+  <ui-ghost-dots [float]="false"></ui-ghost-dots>
 </section>
