Add "simple" input to <ui-pagination>

--- a/ngrx/code/posts-app/src/app/shared/ui/components/pagination/pagination.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/pagination/pagination.component.scss
@@ -2,8 +2,10 @@
 
 .pagination {
   @include pal((
-    flex: (main-axis: 'center'),
     space: my2 mx0,
+    css: (
+      display: flex
+    )
   ));
 
   ::ng-deep button {
