--- a/ngrx/code/posts-app/src/app/shared/ui/components/pagination/pagination.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/pagination/pagination.component.html
@@ -3,7 +3,7 @@
   <!-- Previous -->
   <ui-button
     class="link back"
-    color="primary-outline"
+    [color]="color+'-outline'"
     type="button"
     size="small"
     [isDisabled]="!previous"
@@ -13,22 +13,24 @@
   </ui-button>
 
   <!-- Direct page links -->
-  <ui-button
-    *ngFor="let page of pages"
-    class="link"
-    type="button"
-    size="small"
-    [color]="page === current ? 'primary' : 'primary-outline'"
-    [isDisabled]="!page"
-    (click)="onClick(page)"
-  >
-    {{ page ? page : '...' }}
-  </ui-button>
+  <ng-container *ngIf="!simple">
+    <ui-button
+      *ngFor="let page of pages"
+      class="link"
+      type="button"
+      size="small"
+      [color]="page === current ? color : color+'-outline'"
+      [isDisabled]="!page"
+      (click)="onClick(page)"
+    >
+      {{ page ? page : '...' }}
+    </ui-button>
+  </ng-container>
 
   <!-- Next -->
   <ui-button
     class="link next"
-    color="primary-outline"
+    [color]="color+'-outline'"
     type="button"
     size="small"
     [isDisabled]="!next"
