WIP: dismissable button on cards

--- a/ngrx/code/posts-app/src/app/shared/ui/components/card/card.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/card/card.component.html
@@ -1,10 +1,15 @@
 <div class="header">
+
   <div class="title">
     <ng-content select="[slot='title']"></ng-content>
   </div>
+
   <div class="subtitle">
     <ng-content select="[slot='subtitle']"></ng-content>
   </div>
+
+  <div *ngIf="dismissable" class="dismiss">&times;</div>
+
 </div>
 
 <div class="body">
