--- a/ngrx/code/posts-app/src/app/shared/ui/components/card/card.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/card/card.component.scss
@@ -12,20 +12,22 @@
 }
 
 .header {
-  .title ::ng-deep > * {
-    font-size: 1.5rem;
-    margin: 0;
-  }
-  .subtitle ::ng-deep > * {
-    font-size: 1rem;
-    margin: 0;
-    margin-top: -0.66rem;
-    margin-bottom: 0.66rem;
-  }
+  position: relative;
 }
 
-.body {
+.title ::ng-deep > * {
+  font-size: 1.5rem;
+  margin: 0;
+}
+.subtitle ::ng-deep > * {
+  font-size: 1rem;
+  margin: 0;
+  margin-top: -0.66rem;
+  margin-bottom: 0.66rem;
+}
 
+.dismiss {
+  font-size: 1.5rem;
 }
 
 .footer:not(:empty) {
