Fix dismissable handle on <ui-card>

--- a/ngrx/code/posts-app/src/app/shared/ui/components/card/card.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/card/card.component.scss
@@ -27,7 +27,15 @@
 }
 
 .dismiss {
-  font-size: 1.5rem;
+  font-size: 2rem;
+  position: absolute;
+  top: -1rem;
+  right: -0.5rem;
+  cursor: pointer;
+
+  &:hover {
+    color: pal-get('colors.primary-mid-light');
+  }
 }
 
 .footer:not(:empty) {
