--- a/ngrx/code/posts-app/src/app/shared/ui/components/breadcrumbs/breadcrumbs.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/breadcrumbs/breadcrumbs.component.scss
@@ -31,6 +31,7 @@
       color: (text: 'primary-mid-light'),
       css: (
         font-weight: 600,
+        cursor: pointer,
       )
     ));
   }
