--- a/ngrx/code/posts-app/src/app/shared/ui/components/grid/row/row.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/grid/row/row.component.scss
@@ -18,6 +18,11 @@
     ::ng-deep ui-col {
       padding: 0.5rem;
     }
+
+    &::after {
+      content: '';
+      flex: auto;
+    }
   }
 
   // Justify
