--- a/ngrx/code/posts-app/src/app/features/posts/containers/post/post.component.scss
+++ b/ngrx/code/posts-app/src/app/features/posts/containers/post/post.component.scss
@@ -1,1 +1,20 @@
 @import 'src/app/style';
+
+.back {
+  cursor: pointer;
+}
+
+// Bringhurst's rule
+.readable {
+  max-width: 45rem;
+  margin: 0 auto;
+}
+
+.author {
+  margin-bottom: 1rem;
+  font-style: italic;
+}
+
+.body {
+  font-size: 1.1rem,
+}
