--- a/ngrx/code/posts-app/src/app/shared/ui/demo/pages/breadcrumbs/breadcrumbs.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/demo/pages/breadcrumbs/breadcrumbs.component.html
@@ -18,3 +18,13 @@
     { path: null, label: 'Current' }
   ]"
 ></ui-breadcrumbs>
+
+<hr>
+
+<ui-breadcrumbs
+  withBack
+  [links]="[
+    { path: '/demo', label: 'First' },
+    { path: '/demo', label: 'Second' }
+  ]"
+></ui-breadcrumbs>
