Fix and style <ui-chip>

--- a/ngrx/code/posts-app/src/app/shared/ui/components/chip/chip.component.html
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/chip/chip.component.html
@@ -1,2 +1,2 @@
 <ng-content></ng-content>
-<span *ngIf="dismissable" class="dismiss">&times;</span>
+<span *ngIf="dismissable" class="dismiss" (click)="onDismiss()">&times;</span>
