--- a/ngrx/code/posts-app/src/app/shared/ui/components/chip/chip.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/chip/chip.component.scss
@@ -1,7 +1,7 @@
 @import 'src/app/style';
 
 $sizes: (
-  'small': 0.66rem,
+  'small': 0.80rem,
   'medium': 1rem,
   'large': 1.5rem,
 );
@@ -11,17 +11,17 @@ $colors: (
   'primary-dark': 'white',
   'primary-mid-dark': 'white',
   'primary': 'white',
-  'primary-mid-light': 'black',
+  'primary-mid-light': 'white',
   'primary-light': 'black',
   'secondary-dark': 'white',
   'secondary-mid-dark': 'white',
   'secondary': 'white',
-  'secondary-mid-light': 'black',
+  'secondary-mid-light': 'white',
   'secondary-light': 'black',
   'grey-dark': 'white',
   'grey-mid-dark': 'white',
   'grey': 'white',
-  'grey-mid-light': 'black',
+  'grey-mid-light': 'white',
   'grey-light': 'black',
 );
 
@@ -29,16 +29,15 @@ $colors: (
   display: inline-flex;
   justify-content: space-between;
   align-items: center;
-  border: 1px solid red;
-
-  &.ciao {
-    color: red !important;
-  }
+  box-shadow: 2px 2px 2px rgba(0,0,0,0.1);
 
   @each $key, $value in $sizes {
     &.size-#{$key} {
       height: $value;
-      border-radius: $value / 2;
+      padding: (0.66 * $value) $value;
+      border-radius: (0.66 * 2 * $value + 0.9 * $value) / 2;
+      font-size: 0.9 * $value;
+      line-height: 0.9 * $value;
     }
   }
 
@@ -49,5 +48,10 @@ $colors: (
       ));
     }
   }
+}
 
+.dismiss {
+  margin-left: 0.5rem;
+  font-size: 1.1em;
+  cursor: pointer;
 }
