--- a/ngrx/code/posts-app/src/app/shared/ui/components/grid/col/col.component.scss
+++ b/ngrx/code/posts-app/src/app/shared/ui/components/grid/col/col.component.scss
@@ -1,10 +1,10 @@
 @import 'src/app/style';
 
-$numbers: (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12);
+$twelfths: (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12);
 
 :host {
 
-  @each $number in $numbers {
+  @each $number in $twelfths {
     &.size-#{$number} {
       flex-basis: (100% * $number / 12);
       max-width: (100% * $number / 12);
@@ -12,7 +12,7 @@ $numbers: (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12);
   }
 
   @include pal-media-query('tablet', 'up') {
-    @each $number in $numbers {
+    @each $number in $twelfths {
       &.size-md-#{$number} {
         flex-basis: (100% * $number / 12);
         max-width: (100% * $number / 12);
@@ -21,7 +21,7 @@ $numbers: (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12);
   }
 
   @include pal-media-query('desktop', 'up') {
-    @each $number in $numbers {
+    @each $number in $twelfths {
       &.size-lg-#{$number} {
         flex-basis: (100% * $number / 12);
         max-width: (100% * $number / 12);
